import React from 'react';
import { render } from '@testing-library/react';
import { Profiles } from '../../components';

describe('<Profiles />', () => {
  it('Renders the <Profiles /> with populated data', () => {
    const { container, getByText, getByTestId } = render(<Profiles></Profiles>);
  });
});
