// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Profiles /> Renders the <Profiles /> with populated data 1`] = `
<div
  class="profiles__Container-mfsi0x-0 eElgzR"
>
  <h1
    class="profiles__Title-mfsi0x-1 kjBaoJ"
  >
    Who's watching?
  </h1>
  <ul
    class="profiles__List-mfsi0x-2 cMZVyu"
  >
    <li
      class="profiles__Item-mfsi0x-5 kKqToI"
    >
      <img
        class="profiles__Picture-mfsi0x-4 knQgtl"
        data-testid="profile-picture"
        src="/images/users//images/karl.png.png"
      />
      <p
        class="profiles__Name-mfsi0x-3 gbwdLW"
      >
        Bart
      </p>
    </li>
  </ul>
</div>
`;

exports[`<Profiles /> Renders the <Profiles /> with populated data but misc profile image 1`] = `
<div
  class="profiles__Container-mfsi0x-0 eElgzR"
>
  <h1
    class="profiles__Title-mfsi0x-1 kjBaoJ"
  >
    Who's watching?
  </h1>
  <ul
    class="profiles__List-mfsi0x-2 cMZVyu"
  >
    <li
      class="profiles__Item-mfsi0x-5 kKqToI"
    >
      <img
        class="profiles__Picture-mfsi0x-4 knQgtl"
        data-testid="profile-picture-misc"
        src="/images/misc/loading.gif"
      />
      <p
        class="profiles__Name-mfsi0x-3 gbwdLW"
      >
        Bart
      </p>
    </li>
  </ul>
</div>
`;
